--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 <% end %>
 
-<h1 id='pipo'>Bienvenidos a PIPOlandia</h1>
+<h1 id='pipo'>PIPOlandia™</h1>
 
 <% 7.times do |index| %>
   <%= turbo_frame_tag "square#{index}" do %>
