--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,15 +1,85 @@
-<% 7.times do |index| %>
-  <%= turbo_frame_tag "square#{index}" do %>
-    <div class="square">
-    </div>
-  <% end %>
+<%= turbo_frame_tag "square1" do %>
+  <div class="square">
+    <%= inline_svg_tag('spotify.svg') %>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square2" do %>
+  <div class="square">
+    <p>ESPERALO™</p>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square3" do %>
+  <div class="square">
+    <%= inline_svg_tag('youtube.svg') %>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square4" do %>
+  <div class="square">
+    <p>PROXIMAMENTE™</p>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square5" do %>
+  <div class="square">
+    <%= inline_svg_tag('soundcloud.svg') %>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square6" do %>
+  <div class="square">
+    <%= inline_svg_tag('instagram.svg') %>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square7" do %>
+  <div class="square">
+    <p>ESPERALO™</p>
+  </div>
 <% end %>
 
 <h1 id='pipo'>PIPOlandia™</h1>
 
-<% 7.times do |index| %>
-  <%= turbo_frame_tag "square#{index}" do %>
-    <div class="square">
-    </div>
-  <% end %>
+<%= turbo_frame_tag "square7" do %>
+  <div class="square">
+    <p>ESPERALO™</p>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square8" do %>
+  <div class="square">
+    <%= inline_svg_tag('facebook.svg') %>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square9" do %>
+  <div class="square">
+    <p>ESPERALO™</p>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square10" do %>
+  <div class="square">
+    <p>PROXIMAMENTE™</p>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square11" do %>
+  <div class="square">
+    <p>ESPERALO™</p>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square12" do %>
+  <div class="square">
+    <p>PROXIMAMENTE™</p>
+  </div>
+<% end %>
+
+<%= turbo_frame_tag "square13" do %>
+  <div class="square">
+    <p>ESPERALO™</p>
+  </div>
 <% end %>
