--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
  */
 @font-face {
   font-family: 'pipo';
-  src: url('FredokaOne-Regular.ttf');
+  src: asset-url('FredokaOne-Regular.ttf');
 }
 
 html {
