custom helper for adding svgs

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "square1" do %>
   <div class="square">
-    <%= inline_svg_tag('spotify.svg') %>
+    <%= embedded_svg('spotify.svg') %>
   </div>
 <% end %>
 
@@ -12,7 +12,7 @@
 
 <%= turbo_frame_tag "square3" do %>
   <div class="square">
-    <%= inline_svg_tag('youtube.svg') %>
+    <%= embedded_svg('youtube.svg') %>
   </div>
 <% end %>
 
@@ -24,13 +24,13 @@
 
 <%= turbo_frame_tag "square5" do %>
   <div class="square">
-    <%= inline_svg_tag('soundcloud.svg') %>
+    <%= embedded_svg('soundcloud.svg') %>
   </div>
 <% end %>
 
 <%= turbo_frame_tag "square6" do %>
   <div class="square">
-    <%= inline_svg_tag('instagram.svg') %>
+    <%= embedded_svg('instagram.svg') %>
   </div>
 <% end %>
 
@@ -50,7 +50,7 @@
 
 <%= turbo_frame_tag "square8" do %>
   <div class="square">
-    <%= inline_svg_tag('facebook.svg') %>
+    <%= embedded_svg('facebook.svg') %>
   </div>
 <% end %>
 
